header button align fixed

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@
     padding: 20px 25px;
     border: none;
     border-radius: 5px;
+    margin-left: 300px;
 
 }
 
